fix navbar search color in dark mode

--- a/src/sass/dark-mode/_navbar.scss
+++ b/src/sass/dark-mode/_navbar.scss
@@ -46,6 +46,10 @@
     }
   }
 
+  .form-control {
+    background-color: $gray-900;
+  }
+
   .btn-secondary {
     background-color: $gray-900;
     color: $navbar-dark-color;
